samples/_failures_safe/1761129117_b7a38f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a243a6bc.c:128: error: expected ‘;’, ‘,’ or ‘)’ at end of input
